--- a/gradletest/build.gradle
+++ b/gradletest/build.gradle
@@ -19,10 +19,12 @@ dependencies {
 //    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.8.0-beta2'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.8.0-beta2'
+    // spring 5
+    compile group: 'org.springframework', name: 'spring-context', version: '5.1.4.RELEASE'
+
 
 
 }
-
 
 //中文乱码
 tasks.withType(JavaCompile) {
