--- a/gradletest/build.gradle
+++ b/gradletest/build.gradle
@@ -11,7 +11,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
     testCompile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.2.6'
@@ -21,6 +20,9 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.8.0-beta2'
     // spring 5
     compile group: 'org.springframework', name: 'spring-context', version: '5.1.4.RELEASE'
+
+    testCompile group: 'org.springframework', name: 'spring-test', version: '5.1.5.RELEASE'
+
 
 
 
