--- a/gradletest/build.gradle
+++ b/gradletest/build.gradle
@@ -22,10 +22,9 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-context', version: '5.1.4.RELEASE'
 
     testCompile group: 'org.springframework', name: 'spring-test', version: '5.1.5.RELEASE'
+    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 
-
-
-
+    compile group: 'cglib', name: 'cglib', version: '3.2.9'
 }
 
 //中文乱码
